/*
Copyright 2019 The Vitess Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

// This file contains the UpdateStream service definition, necessary
// to make RPC calls to VtTablet for the binlog protocol, used by
// filtered replication only.

syntax = "proto3";
option go_package = "vitess.io/vitess/go/vt/proto/binlogservice";

package binlogservice;

import "binlogdata.proto";

// UpdateStream is the RPC version of binlog.UpdateStream.
service UpdateStream {
  // StreamKeyRange returns the binlog transactions related to
  // the specified Keyrange.
  rpc StreamKeyRange(binlogdata.StreamKeyRangeRequest) returns (stream binlogdata.StreamKeyRangeResponse) {};

  // StreamTables returns the binlog transactions related to
  // the specified Tables.
  rpc StreamTables(binlogdata.StreamTablesRequest) returns (stream binlogdata.StreamTablesResponse) {};
}
